--- a/style/style.css
+++ b/style/style.css
@@ -60,7 +60,7 @@ header > p{
     font-size: 2em;
     color: white;
     max-width: 500px;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
     padding-right: 10px;
     padding-left: 10px;
     margin: auto;
@@ -200,5 +200,9 @@ footer a{
 footer a:hover{
     color: rgb(87, 87, 207);
     text-decoration: underline;
+}
+
+.ultimo{
+    padding-top: 30px;
 }
 
